Fix webmention summary overlap

--- a/src/assets/styles/components/webmentions.scss
+++ b/src/assets/styles/components/webmentions.scss
@@ -1,9 +1,12 @@
 .webmentions {
   &--summary {
-    display        : flex;
-    justify-content: space-between;
-    padding        : 1rem 0.5ch;
-    gap            : 2ch;
+    display         : flex;
+    justify-content : space-between;
+    padding         : 1rem 0.5ch;
+    gap             : 2ch;
+    background-color: hsl(var(--bg-primary));
+    z-index         : 3;
+    position        : relative;
   }
 }
 
